[gd_scene load_steps=6 format=3 uid="uid://bofqnxe5e8b7"]

[ext_resource type="Script" path="res://Entity/obstacles/spinning_weapons.gd" id="1_nemuq"]
[ext_resource type="Texture2D" uid="uid://dob5jp42mjgr8" path="res://Assets/ThrowFire.png" id="1_p1c2e"]
[ext_resource type="PackedScene" uid="uid://bbeanc4v8nole" path="res://Entity/obstacles/dead_zone.tscn" id="3_48ha5"]
[ext_resource type="Texture2D" uid="uid://bgyu4eb7id0fy" path="res://Assets/spotlight.jpg" id="4_x8jsp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n0ffb"]
radius = 5.0

[node name="SpinningWeapons" type="Node2D"]
script = ExtResource("1_nemuq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_p1c2e")
hframes = 3
vframes = 2

[node name="DeadZone" parent="Sprite2D" instance=ExtResource("3_48ha5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/DeadZone"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_n0ffb")

[node name="PointLight2D" type="PointLight2D" parent="Sprite2D"]
color = Color(1, 0.703608, 0.418944, 1)
shadow_enabled = true
texture = ExtResource("4_x8jsp")
texture_scale = 0.1

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture = ExtResource("1_p1c2e")
hframes = 3
vframes = 2

[node name="DeadZone2" parent="Sprite2D2" instance=ExtResource("3_48ha5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D2/DeadZone2"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_n0ffb")

[node name="PointLight2D2" type="PointLight2D" parent="Sprite2D2"]
color = Color(1, 0.703608, 0.418944, 1)
shadow_enabled = true
texture = ExtResource("4_x8jsp")
texture_scale = 0.1

[node name="Sprite2D3" type="Sprite2D" parent="."]
texture = ExtResource("1_p1c2e")
hframes = 3
vframes = 2

[node name="DeadZone3" parent="Sprite2D3" instance=ExtResource("3_48ha5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D3/DeadZone3"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_n0ffb")

[node name="PointLight2D3" type="PointLight2D" parent="Sprite2D3"]
color = Color(1, 0.703608, 0.418944, 1)
shadow_enabled = true
texture = ExtResource("4_x8jsp")
texture_scale = 0.1

[node name="Sprite2D4" type="Sprite2D" parent="."]
texture = ExtResource("1_p1c2e")
hframes = 3
vframes = 2

[node name="PointLight2D4" type="PointLight2D" parent="Sprite2D4"]
color = Color(1, 0.703608, 0.418944, 1)
shadow_enabled = true
texture = ExtResource("4_x8jsp")
texture_scale = 0.1

[node name="DeadZone4" parent="Sprite2D4" instance=ExtResource("3_48ha5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D4/DeadZone4"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_n0ffb")

[node name="Sprite2D5" type="Sprite2D" parent="."]
texture = ExtResource("1_p1c2e")
hframes = 3
vframes = 2

[node name="PointLight2D5" type="PointLight2D" parent="Sprite2D5"]
color = Color(1, 0.703608, 0.418944, 1)
shadow_enabled = true
texture = ExtResource("4_x8jsp")
texture_scale = 0.1

[node name="DeadZone5" parent="Sprite2D5" instance=ExtResource("3_48ha5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D5/DeadZone5"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_n0ffb")

[node name="Sprite2D6" type="Sprite2D" parent="."]
texture = ExtResource("1_p1c2e")
hframes = 3
vframes = 2

[node name="DeadZone6" parent="Sprite2D6" instance=ExtResource("3_48ha5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D6/DeadZone6"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_n0ffb")

[node name="PointLight2D6" type="PointLight2D" parent="Sprite2D6"]
color = Color(1, 0.703608, 0.418944, 1)
shadow_enabled = true
texture = ExtResource("4_x8jsp")
texture_scale = 0.1

[node name="Sprite2D7" type="Sprite2D" parent="."]
texture = ExtResource("1_p1c2e")
hframes = 3
vframes = 2

[node name="DeadZone7" parent="Sprite2D7" instance=ExtResource("3_48ha5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D7/DeadZone7"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_n0ffb")

[node name="PointLight2D7" type="PointLight2D" parent="Sprite2D7"]
color = Color(1, 0.703608, 0.418944, 1)
shadow_enabled = true
texture = ExtResource("4_x8jsp")
texture_scale = 0.1

[node name="Sprite2D8" type="Sprite2D" parent="."]
texture = ExtResource("1_p1c2e")
hframes = 3
vframes = 2

[node name="DeadZone8" parent="Sprite2D8" instance=ExtResource("3_48ha5")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D8/DeadZone8"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_n0ffb")

[node name="PointLight2D8" type="PointLight2D" parent="Sprite2D8"]
color = Color(1, 0.703608, 0.418944, 1)
shadow_enabled = true
texture = ExtResource("4_x8jsp")
texture_scale = 0.1

[node name="RotationPoints" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="RotationPoints"]
position = Vector2(-32, 0)

[node name="Marker2D2" type="Marker2D" parent="RotationPoints"]
position = Vector2(0, -32)

[node name="Marker2D3" type="Marker2D" parent="RotationPoints"]
position = Vector2(32, 0)

[node name="Marker2D4" type="Marker2D" parent="RotationPoints"]
position = Vector2(0, 32)

[node name="Marker2D5" type="Marker2D" parent="RotationPoints"]
position = Vector2(-24, -20)

[node name="Marker2D6" type="Marker2D" parent="RotationPoints"]
position = Vector2(24, -20)

[node name="Marker2D7" type="Marker2D" parent="RotationPoints"]
position = Vector2(-24, 20)

[node name="Marker2D8" type="Marker2D" parent="RotationPoints"]
position = Vector2(24, 20)
